# GT7Eng

./: .env.example  .env.swp  .gitignore  README.md  addresses.txt  plan.md  pyproject.toml  start_gt7eng.sh  start_streamdeck.command  start_streamdeck.sh  stop_gt7eng.sh
bridge/discord/: .env.example  README.md  package-lock.json  package.json
bridge/discord/src/: audio.js  bot.js  commands.js  config.js  index.js  logger.js  pythonClient.js  registerCommands.js  state.js
bridge/discord/test/: audio.test.js  config.test.js  pythonClient.test.js
ideas/: switchbot_wind_idea.md
src/gt7eng/: __init__.py  alerts.py  cli.py  config.py  control.py  llm.py  models.py  pixel_display.py  pixel_themes.py  second_display.py  server.py  service.py  state.py  stt.py  telemetry.py  timefmt.py  tts.py  voice.py  wind.py
src/gt7eng/static/: app.js  index.html  styles.css
tests/: test_config.py  test_control.py  test_llm.py  test_pixel_display.py  test_replay.py  test_second_display.py  test_server_audio.py  test_state_alerts.py  test_stt.py  test_voice.py  test_wind.py
tests/fixtures/: simple_race.jsonl
