[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gt7eng"
version = "0.1.0"
description = "Local Gran Turismo 7 race engineer with web HUD and Discord voice bridge."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
dependencies = [
  "gt-telem>=1.2.1",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
]
voice = [
  "faster-whisper>=1.1",
  "piper-tts>=1.2",
]

[project.scripts]
gt7eng = "gt7eng.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/gt7eng"]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "tests",
  "README.md",
  "plan.md",
  "pyproject.toml",
]
